# growatt_server

./: .dockerignore  .env  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Growatt v6.json  README.md  cliff.toml  config.yaml  docker-compose.yml
.cargo/: audit.toml
.github/workflows/: cd.yaml  ci.yaml  docker.yaml  release.yml  rust.yml  tag.yml  test.yml
.sqlx/: query-0f2e89b0268773ea1a09a1671d41652e5edba434d94d2a7738e5c166668c779c.json  query-13d43037ca6706eb08b717e37d29ddca35fa3aef8264bbf735b4a24fc05cbd6c.json  query-52846824aa35e2162a0e2df49c2f1e3fe5f0e0ae03ef7e019f05b430ef004d98.json  query-aabb55d593535d581592d6e7ea79757afc2a91bfa8e664101267eea0df0454ee.json  query-ce813e2ce53038f1323dd7da9223b59e312c1578eef3f061a7bb9d87c3d2546e.json
inverters/: Growatt v6.json  Growatt v6.yaml
migrations/: 0001_messages_and_data.sql  0002_serial_number.sql  0003_remote_messages.sql  0004_new_messages.sql
src/: config.rs  data4.rs  data_message.rs  main.rs  misc.rs  server.rs  types.rs  utils.rs
src/data/: mod.rs
src/data/v6/: message_type.rs  mod.rs
