[package]
name = "growatt_server"
version = "0.2.0-d"
edition = "2021"
authors = ["Stefano Vittorio Porta <stefa168@hotmail.it>"]
description = "Server that listens for Growatt inverters and copies the data before relaying it to remote."
repository = "https://github.com/stefa168/growatt_server"
license = "GPL-3-or-later"
keywords = ["growatt", "inverter", "server", "proxy", "offline"]

[[bin]]
name = "growatt_server"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.190", features = ["derive", "std", "rc"] }
serde_yaml = "0.9.27"
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = "0.7.10"
futures = "0.3.29"
bytes = "1.5.0"
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["color", "cargo"] }
anyhow = { version = "1.0.75", features = ["backtrace"] }

# Logging dependencies
tracing = { version = "0.1.40", features = ["attributes", "log"] }
tracing-subscriber = { version = "0.3.18",features = ["env-filter", "chrono"] }
tracing-appender = "0.2.3"
tracing-futures = "0.2.5"
tracing-unwrap = "0.10.0"
tracing-panic = "0.1.1"

[dependencies.sqlx]
version = "0.7.2"
features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "migrate", "json", "chrono"]