[package]
name = "growatt_server"
version = "0.1.3-a"
edition = "2021"
authors = ["Stefano Vittorio Porta <stefa168@hotmail.it>"]
repository = "https://github.com/stefa168/growatt_server"
license = "GPL-3-or-later"
keywords = ["growatt", "inverter", "server", "proxy", "offline"]

[[bin]]
name = "growatt_server"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.190", features = ["derive", "std", "rc"] }
serde_yaml = "0.9.27"
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = "0.7.10"
futures = "0.3.29"
bytes = "1.5.0"
chrono = "0.4.31"

[dependencies.sqlx]
version = "0.8.0"
features = ["runtime-tokio","tls-rustls", "postgres", "macros", "migrate", "json", "chrono"]